--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,5 +1,5 @@
 <!-- Main container -->
-<main class="full-box main-container" *ngIf="usuario">
+<main class="full-box main-container" *ngIf="usuario.id">
   <!-- Nav lateral -->
   <section class="full-box nav-lateral">
     <div class="full-box nav-lateral-bg show-nav-lateral"></div>
@@ -11,14 +11,14 @@
 
           <a class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true"
             aria-expanded="false">
-            Nombre Usuario <br><small class="roboto-condensed-light">Rol de Usuario</small>
+            {{usuario.nombre}} <br><small class="roboto-condensed-light">{{usuario.rol.rol}}</small>
 
  
           </a>
           <div class="dropdown-menu dropdown-menu-right">
             <button class="dropdown-item" type="button">Panel de Usuario</button>
             <div class="dropdown-divider"></div>
-            <button class="dropdown-item" type="button">Salir</button>
+            <button class="dropdown-item" type="button" (click)="logout()">Salir</button>
           </div>
         </figcaption>
       </figure>
@@ -34,7 +34,21 @@
                 class="fas fa-chevron-down"></i></a>
             <ul>
               <li>
-                <a [routerLink]="['/administracion/usuarios']"><i class="fas fa-plus fa-fw"></i> &nbsp; Usuarios</a>
+                
+               
+                  <a class="nav-btn-submenu"><i class="fas fa-file-invoice-dollar fa-fw"></i> &nbsp; Usuarios<i
+                      class="fas fa-chevron-down"></i></a>
+                  <ul>
+                    <li>
+                      <a [routerLink]="['/usuarios/agregar']" ><i class="fas fa-plus fa-fw"></i> &nbsp; Registrar Usuario</a>
+                    </li>
+                    <li>
+                      <a [routerLink]="['/usuarios/listado']" ><i class="fas fa-clipboard-list fa-fw"></i> &nbsp; Consultar Usuario</a>
+                    </li>
+                  </ul>
+                
+
+                
               </li>
               <li>
                 <a [routerLink]="['/administracion/reportes']"><i class="fas fa-clipboard-list fa-fw"></i> &nbsp; Reportes</a>
@@ -108,20 +122,19 @@
   <!-- Page content -->
   <section class="full-box page-content ">
     <nav class="full-box navbar-info" >
-      <a (click)="toggleMenu()" href="#" class="float-left show-nav-lateral flex-center " id="show-nav-lateral">
+      <a (click)="toggleMenu()" class="float-left show-nav-lateral flex-center " id="show-nav-lateral">
         <i class="fas fa-2x" [ngClass]="{'fa-bars':hamburguer,'fa-arrow-left':!hamburguer}"></i> 
       </a>
 
       
         <a class="dropdown-toggle" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          <img src="./assets/assets/avatar/Avatar.png" alt="nombreUser" class="rounded-circle" height="40"> Nombre de
-          Usuario
+          <img src="./assets/assets/avatar/Avatar.png" alt="nombreUser" class="rounded-circle" height="40"> {{usuario.nombre}}
         </a>
       
         <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuLink">
           <button class="dropdown-item" type="button">Panel de Usuario</button>
         <div class="dropdown-divider"></div>
-        <button class="dropdown-item" type="button">Salir</button>
+        <button class="dropdown-item" type="button" (click)="logout()">Salir</button>
         </div>
      
     </nav>
@@ -130,4 +143,4 @@
   
   </section>
 </main>
-<router-outlet *ngIf="!usuario"></router-outlet>
+<router-outlet *ngIf="!usuario.id"></router-outlet>
