--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -26,65 +26,14 @@
       <nav class="full-box nav-lateral-menu">
         <ul>
           <li>
-            <a [routerLink]="['/']" ><i class="fab fa-dashcube fa-fw"></i> &nbsp; Principal</a>
+            <a [routerLink]="['/dashboard']" ><i class="fab fa-dashcube fa-fw"></i> &nbsp; Principal</a>
+          </li>
+          <li>
+            <a [routerLink]="['/clientes']"><i class="fas fa-users fa-fw"></i> &nbsp; Clientes </a>
           </li>
 
           <li>
-            <a class="nav-btn-submenu"><i class="fas fa-users fa-fw"></i> &nbsp; Administración <i
-                class="fas fa-chevron-down"></i></a>
-            <ul>
-              <li>
-                
-               
-                  <a class="nav-btn-submenu"><i class="fas fa-file-invoice-dollar fa-fw"></i> &nbsp; Usuarios<i
-                      class="fas fa-chevron-down"></i></a>
-                  <ul>
-                    <li>
-                      <a [routerLink]="['/usuarios/agregar']" ><i class="fas fa-plus fa-fw"></i> &nbsp; Registrar Usuario</a>
-                    </li>
-                    <li>
-                      <a [routerLink]="['/usuarios/listado']" ><i class="fas fa-clipboard-list fa-fw"></i> &nbsp; Consultar Usuario</a>
-                    </li>
-                  </ul>
-                
-
-                
-              </li>
-              <li>
-                <a [routerLink]="['/administracion/reportes']"><i class="fas fa-clipboard-list fa-fw"></i> &nbsp; Reportes</a>
-              </li>
-              <li>
-                <a [routerLink]="['/administracion/bitacora']"><i class="fas fa-search fa-fw"></i> &nbsp; Bitacora</a>
-              </li>
-            </ul>
-          </li>
-          <li>
-            <a class="nav-btn-submenu"><i class="fas fa-users fa-fw"></i> &nbsp; Clientes <i
-                class="fas fa-chevron-down"></i></a>
-            <ul>
-              <li>
-                <a [routerLink]="['/clientes/agregar']"><i class="fas fa-plus fa-fw"></i> &nbsp; Agregar Cliente</a>
-              </li>
-              <li>
-                <a [routerLink]="['/clientes/listado']"><i class="fas fa-clipboard-list fa-fw"></i> &nbsp; Lista de clientes</a>
-              </li>
-              <li>
-                <a [routerLink]="['/clientes/busqueda']"><i class="fas fa-search fa-fw"></i> &nbsp; Buscar cliente</a>
-              </li>
-            </ul>
-          </li>
-
-          <li>
-            <a class="nav-btn-submenu"><i class="fas fa-pallet fa-fw"></i> &nbsp; Productos <i
-                class="fas fa-chevron-down"></i></a>
-            <ul>
-              <li>
-                <a [routerLink]="['/productos/agregar']"  ><i class="fas fa-plus fa-fw"></i> &nbsp; Agregar Producto</a>
-              </li>
-              <li>
-                <a [routerLink]="['/productos/listado']"  ><i class="fas fa-clipboard-list fa-fw"></i> &nbsp; Lista de Productos</a>
-              </li>
-            </ul>
+            <a [routerLink]="['/productos']" ><i class="fas fa-pallet fa-fw"></i> &nbsp; Productos</a>
           </li>
 
           <li>
@@ -112,7 +61,15 @@
               </li>
             </ul>
           </li>
-
+          <li>               
+            <a [routerLink]="['/usuarios']"><i class="fas fa-file-invoice-dollar fa-fw"></i> &nbsp; Usuarios</a>
+        </li>
+        <li>
+          <a [routerLink]="['/reportes']"><i class="fas fa-clipboard-list fa-fw"></i> &nbsp; Reportes</a>
+        </li>
+        <li>
+          <a [routerLink]="['/bitacora']"><i class="fas fa-search fa-fw"></i> &nbsp; Bitacora</a>
+        </li>
 
         </ul>
       </nav>
