--- a/frontend/src/app/modulos/clientes/pages/principal/principal.component.html
+++ b/frontend/src/app/modulos/clientes/pages/principal/principal.component.html
@@ -4,12 +4,15 @@
 ></app-page-header>
  
 <div class="container-fluid">
-    <ul class="full-box list-unstyled page-nav-tabs">
-        <li *ngFor="let link of links" >
-            <a [routerLink]="[link.link]" (click)="cambiarTitulo(link.titulo,link.icono2)" ><i class="{{link.icono}} fa-fw fas"></i> &nbsp; {{link.nombre}}</a>
+    <ul class="full-box list-unstyled">
+        <li >
+            <a ><i class="fa-plus fa-fw fas"></i> &nbsp; Agregar cliente</a>
         </li>
         
-    </ul>	
+    </ul>
 </div>
-<router-outlet></router-outlet>
+
+<app-listar></app-listar>
+
+<!-- <router-outlet></router-outlet> -->
  
