arreglos en compras

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -41,7 +41,7 @@
                 class="fas fa-chevron-down"></i></a>
             <ul>
               <li>
-                <a [routerLink]="['/ventas/registrar']" ><i class="fas fa-plus fa-fw"></i> &nbsp; Registrar venta</a>
+                <a href="/ventas/registrar" ><i class="fas fa-plus fa-fw"></i> &nbsp; Registrar venta</a>
               </li>
               <li>
                 <a [routerLink]="['/ventas/listado']" ><i class="fas fa-clipboard-list fa-fw"></i> &nbsp; Consultar Ventas</a>
