--- a/frontend/src/app/modulos/ventas/pages/registrar/registrar.component.html
+++ b/frontend/src/app/modulos/ventas/pages/registrar/registrar.component.html
@@ -1,3 +1,7 @@
+<app-page-header
+[titulo]="titulo"
+[icono]="icono"
+></app-page-header>
 <div class="modal fade" id="modalCli">
     <div class="modal-dialog modal-xl" >
         <div class="modal-content">
