--- a/frontend/src/app/modulos/ventas/pages/listado/listado.component.html
+++ b/frontend/src/app/modulos/ventas/pages/listado/listado.component.html
@@ -1,3 +1,7 @@
+<app-page-header
+[titulo]="titulo"
+[icono]="icono"
+></app-page-header>
 <div class="container-fluid ">
     <div class="container-fluid form-neon">
         <form class="">
