arreglos en modulo de ventas

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -54,10 +54,10 @@
                 class="fas fa-chevron-down"></i></a>
             <ul>
               <li>
-                <a [routerLink]="['/compras/registrar']" ><i class="fas fa-plus fa-fw"></i> &nbsp; Nueva Compra</a>
+                <a href="/compras/registrar" ><i class="fas fa-plus fa-fw"></i> &nbsp; Nueva Compra</a>
               </li>
               <li>
-                <a [routerLink]="['/compras/consultar']" ><i class="fas fa-clipboard-list fa-fw"></i> &nbsp; Consultar de Compras</a>
+                <a [routerLink]="['/compras/consultar']" ><i class="fas fa-clipboard-list fa-fw"></i> &nbsp; Listado de Compras</a>
               </li>
             </ul>
           </li>
