--- a/frontend/src/app/modulos/ventas/pages/ver/ver.component.html
+++ b/frontend/src/app/modulos/ventas/pages/ver/ver.component.html
@@ -5,8 +5,8 @@
                 <h2><a href="javascript:void(0)">GetSales</a></h2>
             </div>
             <div class="col-6 text-right">
-                <h5>FACTURA</h5>
-                <h5><small>Factura #00{{factura.id}}</small></h5>
+                <h5>Comprobante de Venta</h5>
+                <h5><small>Comprobante #00{{factura.id}}</small></h5>
                 <h5><small>Fecha {{factura.fecha | date:'dd/MM/yy'}}</small></h5>
             </div>
             <div class="col-12 mt-5">
