--- a/frontend/src/app/pages/usuarios/listar/listar.component.html
+++ b/frontend/src/app/pages/usuarios/listar/listar.component.html
@@ -1,9 +1,9 @@
-<app-page-header
+<!-- FILTRO DE USUARIOS<app-page-header
 [titulo]="titulo"
 [icono]="icono"
 ></app-page-header>
 <div class="container-fluid">
-    <!-- FILTRO DE USUARIOS !-->
+   
 <form class="form-neon" #formsearch="ngForm">
         <div class="container-fluid">
             <div class="row justify-content-md-center">
@@ -42,16 +42,16 @@
                 </tr>
             </thead>
             <tbody>
-                <tr class="text-center" *ngFor="let usuario of usuarios">
+                <tr class="text-center" *ngFor="let usuario of usuarios; let indice=index ">
                     <td>{{ usuario.rol_id }}</td>
                     <th>{{usuario.username}}</th>
                     <th>{{usuario.nombre}}</th>
                     <th>{{usuario.email}}</th>
                     <td>
-                        <a class="btn btn-success">
+                       <a class="btn btn-success">
                             <i [routerLink]="['/usuarios/usuario/',usuario.id ]"   class="fas fa-sync-alt"></i>
                         </a>
-                         <button type="button" class="btn btn-warning">
+                         <button type="button" class="btn btn-warning" (click)="delete(indice)" >
                             <i class="far fa-trash-alt"></i>
                         </button> 
                     </td>
@@ -74,3 +74,102 @@
     </nav>
 </div>
 
+ !-->
+
+
+
+
+
+
+
+
+<div class="modal fade bd-example-modal-lg " id="modarAgregar" tabindex="-1" role="document" aria-labelledby="mySmallModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-lg">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">Agregar Usuario</h5>
+                <button  type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+          
+              <app-agregar-usuario></app-agregar-usuario>
+          
+        </div>
+      </div>
+</div>
+
+<div class="modal fade bd-example-modal-lg " id="modalActualizar" tabindex="-1" role="document" aria-labelledby="mySmallModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-lg">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">Actualizar Usuario: {{usuario.nombre}}</h5>
+                <button  type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+          
+              <app-actualizar-usuario
+              [usuario]="usuario"
+              ></app-actualizar-usuario>
+              
+              <br>
+
+          
+        </div>
+      </div>
+</div>
+<div class="container-fluid ">
+    <div class="container-fluid form-neon">
+        <button type="button" class="btn btn-raised btn-primary mb-3" data-toggle="modal" data-target="#modarAgregar"> <i class="fa fa-plus"></i>&nbsp; Agregar Usuario </button>
+    <div class="table-responsive">
+        <legend class="text-center mb-2"><i class="fas fa-user"></i> &nbsp; Listado de Usuarios</legend>
+        <table class="table table-dark table-md">
+            <thead>
+                <tr class="text-center roboto-medium">
+                    <th>Rol</th>
+                    <th>Nombre de Usuario</th>
+                    <th>Nombre</th>
+                    <th>Correo</th>
+                    <th>Acciones</th>
+                    
+                </tr>
+            </thead>
+            <tbody>
+                <tr class="text-center" *ngFor="let usuario of usuarios; let indice=index ">
+                    <td>{{ usuario.rol_id }}</td>
+                    <th>{{usuario.username}}</th>
+                    <th>{{usuario.nombre}}</th>
+                    <th>{{usuario.email}}</th>
+                    <td>
+                        <a class="btn btn-success" data-toggle="modal" data-target="#modalActualizar" (click)="setUsuario(usuario)">
+                            <i class="fas fa-sync-alt"></i>
+                        </a> 
+
+                        <a [routerLink]="['/usuarios/usuario', 1]" class="btn btn-success"><i class="fas fa-eye"></i></a>
+
+                            <button type="button" class="btn btn-warning" (click)="delete(indice)" >
+                            <i class="far fa-trash-alt"></i>
+                        </button> 
+                            
+                        
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+    <nav aria-label="Page navigation example">
+        <ul class="pagination justify-content-center">
+            <li class="page-item disabled">
+                <a class="page-link" href="#" tabindex="-1">Previous</a>
+            </li>
+            <li class="page-item"><a class="page-link" href="#">1</a></li>
+            <li class="page-item"><a class="page-link" href="#">2</a></li>
+            <li class="page-item"><a class="page-link" href="#">3</a></li>
+            <li class="page-item">
+                <a class="page-link" href="#">Next</a>
+            </li>
+        </ul>
+    </nav>
+    </div>
+</div>
