--- a/frontend/src/app/pages/usuarios/usuarios.component.html
+++ b/frontend/src/app/pages/usuarios/usuarios.component.html
@@ -1,1 +1,7 @@
-<app-listar-usuario></app-listar-usuario>
+<app-page-header
+[titulo]="titulo"
+[icono]="icono"
+></app-page-header>
+<app-listar-usuario
+[usuarios]="usuarios">
+</app-listar-usuario>
