--- a/frontend/src/app/pages/usuarios/actualizar/actualizar.component.html
+++ b/frontend/src/app/pages/usuarios/actualizar/actualizar.component.html
@@ -32,8 +32,8 @@
                             <label class="">Nivel de Privilegio</label>
                             <select class="form-control" name="rol" [(ngModel)]="usuario.rol_id" #rol="ngModel" required>
                                 <option value="" selected="" disabled=""></option>
-                                <option value="1">Administrador del Sistema</option>
-                                <option value="2">Vendedor</option>
+                                <option value="Administrador">Administrador del Sistema</option>
+                                <option value="Vendedor">Vendedor</option>
                             </select>
                         </div>
                     </div>
