--- a/frontend/src/app/pages/clientes/agregar/agregar.component.html
+++ b/frontend/src/app/pages/clientes/agregar/agregar.component.html
@@ -2,7 +2,7 @@
     <div class="alert alert-danger" role="alert" *ngIf="registrado">
         El cliente ha sido registrado 
     </div>
-    <form #formulario="ngForm" class="form-neon" autocomplete="off" >
+    <form #formulario="ngForm" autocomplete="off" >
         <fieldset>
             <legend><i class="fas fa-user"></i> &nbsp; Información básica</legend>
             <div class="container-fluid">
@@ -22,7 +22,7 @@
                     <div class="col-12 col-md-6 col-lg-4">
                         <div class="form-group bmd-form-group bmd-form-group-lg">
                             <label for="fecha_nacimiento" >Fecha de Nacimiento</label>
-                            <input type="date" class="form-control" name="fecha_nacimiento" id="fecha_nacimiento"  [(ngModel)]="cliente.fecha_nacimiento" #fecha_nacimiento="ngModel"maxlength="20" required>
+                            <input type="date" class="form-control" name="fecha_nacimiento" id="fecha_nacimiento"  [(ngModel)]="cliente.fecha_nacimiento" #fecha_nacimiento="ngModel" required>
                         </div>
                     </div>
                     <div class="col-12 col-md-6 col-lg-4">
@@ -54,7 +54,7 @@
         </div>
         <p class="text-center" >
             &nbsp; &nbsp;
-            <button (click)="agregar(formulario)" type="submit" class="btn btn-raised btn-danger btn-lg" [disabled]="formulario.invalid"><i class="far fa-save"></i> &nbsp; Registrar</button>
+            <button (click)="agregar(formulario)" type="submit" class="btn btn-raised btn-danger btn-lg" [disabled]="formulario.invalid"><i class="far fa-save"></i> &nbsp; {{boton}}</button>
         </p>
     </form>
 </div>	
