--- a/frontend/src/app/pages/usuarios/listar/listar.component.html
+++ b/frontend/src/app/pages/usuarios/listar/listar.component.html
@@ -123,13 +123,22 @@
     <div class="container-fluid form-neon">
         <button type="button" class="btn btn-raised btn-primary mb-3" data-toggle="modal" data-target="#modarAgregar"> <i class="fa fa-plus"></i>&nbsp; Agregar Usuario </button>
     <div class="table-responsive">
-        <legend class="text-center mb-2"><i class="fas fa-user"></i> &nbsp; Listado de Usuarios</legend>
+        <form>
+            <div class="row d-flex justify-content-end">
+                <div class="col-12 col-md-5 col-lg-4">
+                   <div class="form-group bmd-form-group bmd-form-group-lg">
+                    <input type="search" name="buscar" id="buscar" placeholder="Buscar usuario" class="form-control">
+                   </div>
+                </div>
+            </div>
+        </form>
         <table class="table table-dark table-md">
             <thead>
                 <tr class="text-center roboto-medium">
                     <th>Rol</th>
                     <th>Nombre de Usuario</th>
                     <th>Nombre</th>
+                    <th>Rol</th>
                     <th>Correo</th>
                     <th>Acciones</th>
                     
@@ -140,13 +149,14 @@
                     <td>{{ usuario.rol_id }}</td>
                     <th>{{usuario.username}}</th>
                     <th>{{usuario.nombre}}</th>
+                    <th>{{usuario.rol_id}}</th>
                     <th>{{usuario.email}}</th>
                     <td>
                         <a class="btn btn-success" data-toggle="modal" data-target="#modalActualizar" (click)="setUsuario(usuario)">
                             <i class="fas fa-sync-alt"></i>
                         </a> 
-
-                        <a [routerLink]="['/usuarios/usuario', 1]" class="btn btn-success"><i class="fas fa-eye"></i></a>
+<!-- 
+                        <a [routerLink]="['/usuarios/usuario', 1]" class="btn btn-success"><i class="fas fa-eye"></i></a> -->
 
                             <button type="button" class="btn btn-warning" (click)="delete(indice)" >
                             <i class="far fa-trash-alt"></i>
